--- a/question-bank-frontend/src/app/components/layout/layout.component.html
+++ b/question-bank-frontend/src/app/components/layout/layout.component.html
@@ -28,6 +28,11 @@
         </a>
       </li>
     </ul>
+    <div class="mt-4">
+      <button class="btn btn-outline-danger w-100" (click)="logout()">
+        <i class="bi bi-box-arrow-right me-1"></i> Sair
+      </button>
+    </div>
   </nav>
 
   <div class="flex-grow-1 bg-light p-4">
