refactor: services in front-end

--- a/question-bank-frontend/src/app/components/layout/layout.component.html
+++ b/question-bank-frontend/src/app/components/layout/layout.component.html
@@ -23,7 +23,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark fw-semibold d-flex align-items-center gap-2" routerLink="/alternatives">
+        <a class="nav-link text-dark fw-semibold d-flex align-items-center gap-2" routerLink="/options">
           <i class="bi bi-list-ol"></i> Alternativas
         </a>
       </li>
