--- a/question-bank-frontend/src/app/components/option/option.component.html
+++ b/question-bank-frontend/src/app/components/option/option.component.html
@@ -75,22 +75,22 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let alternative of alternatives">
-            <td>{{ alternative.id }}</td>
-            <td [title]="alternative.text">
-              {{ alternative.text.length > 50 ? (alternative.text | slice:0:50) + '...' : alternative.text }}
+          <tr *ngFor="let option of options">
+            <td>{{ option.id }}</td>
+            <td [title]="option.text">
+              {{ option.text.length > 50 ? (option.text | slice:0:50) + '...' : option.text }}
             </td>
-            <td>{{ translateIsCorrect(alternative.isCorrect) }}</td>
-            <td [title]="questionStatements[alternative.questionId]">
-              {{ questionStatements[alternative.questionId] ? (questionStatements[alternative.questionId].length > 50 ?
-              (questionStatements[alternative.questionId] | slice:0:50) + '...' :
-              questionStatements[alternative.questionId]) : 'Carregando...' }}
+            <td>{{ translateIsCorrect(option.isCorrect) }}</td>
+            <td [title]="questionStatements[option.questionId]">
+              {{ questionStatements[option.questionId] ? (questionStatements[option.questionId].length > 50 ?
+              (questionStatements[option.questionId] | slice:0:50) + '...' :
+              questionStatements[option.questionId]) : 'Carregando...' }}
             </td>
             <td>
-              <button class="btn btn-sm btn-outline-primary me-2" (click)="editAlternative(alternative)">
+              <button class="btn btn-sm btn-outline-primary me-2" (click)="editOption(option)">
                 <i class="bi bi-pencil-square"></i>
               </button>
-              <button class="btn btn-sm btn-outline-danger" (click)="deleteAlternative(alternative.id)">
+              <button class="btn btn-sm btn-outline-danger" (click)="deleteOption(option.id)">
                 <i class="bi bi-trash"></i>
               </button>
             </td>
