refactor: test entity

--- a/question-bank-frontend/src/app/components/layout/layout.component.html
+++ b/question-bank-frontend/src/app/components/layout/layout.component.html
@@ -8,8 +8,8 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark fw-semibold d-flex align-items-center gap-2" routerLink="/users">
-          <i class="bi bi-people"></i> Usuários
+        <a class="nav-link text-dark fw-semibold d-flex align-items-center gap-2" routerLink="/tests">
+          <i class="bi bi-clipboard-check"></i> Simulados
         </a>
       </li>
       <li class="nav-item">
@@ -25,6 +25,11 @@
       <li class="nav-item">
         <a class="nav-link text-dark fw-semibold d-flex align-items-center gap-2" routerLink="/options">
           <i class="bi bi-list-ol"></i> Alternativas
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-dark fw-semibold d-flex align-items-center gap-2" routerLink="/users">
+          <i class="bi bi-people"></i> Usuários
         </a>
       </li>
     </ul>
